--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div><img src="./Untitled design.png" class="logo" /></div>
                     <div><h1 class="company-name">FacePin</h1></div>
                 </div>
-                <a href="./Index.html" class="navbar-link" >Home</a>
+                <a href="./index.html" class="navbar-link" >Home</a>
                 <a href="./About.html" class="navbar-link" class="alt" >About</a>
                 <div>
                     <a href="#" onclick="openSignUp()" class="signup-btn" class="alt" >Sign Up</a>
